YaCy: The Search Engine with the friendly whale

version 0.44svn
	* FIXED: special chars(like german umlauts) in tagNames allowed. (Allo)
	* ADDED: Show public Bookmarks in Bookmarks.html, private ones, if the user is logged in. (Allo)
	* FIXED: /xml/bookmarks/* now uses one file for private/public entries. private only with password.
	* ADDED: possibility to get the ranking for a url. (Allo)
	
version 0.43
	* UPDATED: new database handling of index entry objects, less IO overhead (Orbiter)
	* ADDED: many new ranking attributes and handling routines (Orbiter)
	* ADDED: new DetailedSearch page for ranking testing (Orbiter)
	* ADDED: nearby-search in general and nearby-1 for queries enclosed in doublequotes (Orbiter)
	* FIXED: YBR transmission protocol path selection security bug (Orbiter)
	* ADDED: additional Shutdownmethod to run YaCy as Windows Service (theli)
	* ADDED: possibility to import the crawling queue (theli)
	* UPDATED: German translations (NN, rramthun)
	* UPDATED: minor enhancements to the webinterface (rramthun)
	* UPDATED: Memorysettings now also working for Windows (Galaxis, VT100)
	* UPDATED: added more informations to network.xml, added possibility to limit number of results (hendi)
	* FIXED: some Filemodes were set wrong (theli)
	* FIXED: minor bug-fix in Cache for some rare URLs (borg-0300)
	* ADDED: The YaCy-Bookmarkssystem (allo)
	* UPDATED: New Searchstyle
	* FIXED: notifier.gif works even when only DATA is writable (allo)
	* FIXED: Translations work with readonly htroot now. (allo)
	* ADDED: Log for unused Translationstrings & Support for multiple
	         #File: Sektions for the same file (Allo)

version 0.40 (8/21/2005):
	* The Server now provides the virtuel Header IS_ADMIN (Alexander Schier)
	* Improved German Translation (Roland Ramthun, Oliver Wunder)
	* The Wiki now has cites and definitionlists (Marc Nause)
	* If there are more than 10 DHT-entries while doing an inden transfer,