@@ -1,0 +1,29 @@
+ads
+ads43
+dir
+jhtml
+shtml
+nach
+auf
+mit
+zum
+bei
+ueber
+all
+app
+ist
+eine
+auch
+aber
+und
+der
+die
+das
+dass
+oder
+from
+kein
+weg
+site=all
+referrer=default
+>>>
